--- a/src/index.css
+++ b/src/index.css
@@ -1,965 +1,87 @@
 ﻿@charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-body {
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.38),
-    0 2px 0 rgba(255, 124, 0, 0.16);
-  letter-spacing: 0.05em;
+/* start */
+html {
+  height: 100%;
+  text-size-adjust: 100%;
+  /* scroll-behavior: smooth; */
+  font-size: 1rem;
 }
-
 body {
   position: relative;
-  line-height: 1.5em;
-  -webkit-font-smoothing: antialiased;
   font-family: 'Baskerville Old Face', Baskerville, 'Times New Roman', Times,
-    serif, Georgia, Palatino, 'Palatino Linotype', 'HGS明朝E',
-    'ヒラギノ明朝 Pro W3', 'Hiragino Mincho Pro', 'ＭＳ Ｐ明朝',
-    'Times New Roman', '游明朝', YuMincho, 'ヒラギノ明朝 ProN W3',
-    'Hiragino Mincho ProN', 'ＭＳ Ｐ明朝', 'MS PMincho', serif;
-  /*明朝*/
+    Georgia, Palatino, 'Palatino Linotype', 'HGS明朝E', 'ヒラギノ明朝 Pro W3',
+    'Hiragino Mincho Pro', 'ＭＳ Ｐ明朝', '游明朝', YuMincho,
+    'ヒラギノ明朝 ProN W3', 'Hiragino Mincho ProN', 'MS PMincho', serif;
+  line-height: 1.5em;
+  text-shadow: 0 1px 0 rgb(255 255 255 / 38%), 0 2px 0 rgb(255 124 0 / 16%);
+  letter-spacing: 0.05em;
+  -webkit-font-smoothing: antialiased;
+  /* 明朝 */
 }
-
+img {
+  @apply block;
+}
 body,
 a {
   color: #797979;
 }
-
-/*a{color: #333;}*/
+p > a {
+  word-break: break-all;
+}
+a:active {
+  opacity: 1 important;
+}
+/* a{color: #333;} */
 html.gecko,
 html.android {
   font-size: 0.85em;
 }
-
-.Eng {
+div,
+article {
+  @apply max-w-full;
+}
+svg:not(:root) {
+  overflow: hidden;
+}
+body.has-center-text {
+  text-align: center;
+}
+a:hover {
+  color: #222;
+  opacity: 1;
+}
+li {
+  margin: 0 0.556em 0 0;
+  list-style: none;
+}
+/* ショートカット */
+.eng {
   line-height: 1.4em;
   letter-spacing: 1px;
 }
-
-.Jpn {
-  letter-spacing: 0px;
+.jpn {
   font-size: small;
   line-height: 1.6em;
   letter-spacing: 0.1px;
 }
-
-.handwriting {
-  font-style: italic;
-  font-family: 'Monsieur La Doulaise', cursive;
-}
-
-/* @end */
-/* @group スタティック */
-STATIC {
-  color: white;
-  background-color: lime;
-}
-
-form,
-form * {
-  margin: 0;
-  padding: 0;
-  display: inline;
-}
-
-img,
-a img {
-  border: 0;
-}
-
-a {
-  text-decoration: none;
-  z-index: 99999;
-  line-height: 1.92em;
-}
-
-a:active {
-  opacity: 1 important;
-}
-
-ol,
-p {
-  padding: 0px;
-  margin: 0px;
-}
-
-li {
-  list-style-type: none;
-}
-
-/*ショートカット*/
-.px1618p {
-  font-size: 161.8%;
-  line-height: 1em;
-}
-
-/*レイアウト*/
-.after:after {
-  height: 0;
-  visibility: hidden;
-  content: '.';
-  display: block;
-  clear: both;
-}
-
-.fll:after,
-.flr:after,
-.fc:after {
-  height: 0;
-  position: relative;
-  visibility: hidden;
-  content: '.';
-  display: block;
-  clear: both;
-}
-
-.w618 {
-  width: 59.8%;
-  margin: auto 1%;
-  padding: 0;
-  border: 0;
-}
-
-.w382 {
-  width: 36.2%;
-  margin: auto 1%;
-  padding: 0;
-  border: 0;
-}
-
-.w100 {
-  width: 100%;
-  margin: auto 0;
-  padding: 0;
-  border: 0;
-}
-
-.w711 {
-  width: 711px;
-  margin: auto 0;
-  padding: 0;
-  border: 0;
-}
-
-.fit {
-  margin: 0 !important;
-  padding: 0 !important;
-  border: 0 !important;
-}
-
-p.br {
-  height: 1em;
-}
-
-.br3 {
-  border-radius: 3px;
-}
-
-/*色*/
-.cb {
-  color: #000 !important;
-}
-
-.cw,
-.cfff {
-  color: #fff !important;
-}
-
-.cb1 {
-  color: #553 !important;
-}
-
-.c333 {
-  color: #333 !important;
-}
-
-.c666 {
-  color: #666 !important;
-}
-
-.c999 {
-  color: #999 !important;
-}
-
-.cccc {
-  color: #ccc !important;
-}
-
-.bgf0 {
-  background-color: #f0f0f0 !important;
-}
-
-.bg000 {
-  background-color: #000;
-}
-
-.bgfff {
-  background-color: #fff !important;
-}
-
-/*フォント*/
 .kakugo {
   font-family: 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo,
-    メイリオ, 'ＭＳ ゴシック', 'MS Gothic', sans-serif;
+    'メイリオ', 'ＭＳ ゴシック', 'MS Gothic', sans-serif;
 }
-
 .meiryo {
-  font-family: Meiryo, メイリオ, 'Hiragino Kaku Gothic ProN',
+  font-family: Meiryo, 'メイリオ', 'Hiragino Kaku Gothic ProN',
     'ヒラギノ角ゴ ProN W3', 'ＭＳ ゴシック', 'MS Gothic', sans-serif;
 }
-
 .mincho {
   font-family: 'HGS明朝E', 'ヒラギノ明朝 Pro W3', 'Hiragino Mincho Pro',
     'ＭＳ Ｐ明朝', serif;
 }
-
-.mincho_num {
+.mincho-num {
   font-family: 'HGS明朝E', 'ヒラギノ明朝 Pro W3', 'Hiragino Mincho Pro',
     'ＭＳ Ｐ明朝', serif;
-}
-
-.font-outline {
-  text-shadow: 0 1px 1px black, 0 -1px 1px black, 1px 0 1px black,
-    -1px 0 1px black;
-}
-
-.font-outline-w {
-  text-shadow: 0 1px 1px white, 0 -1px 1px white, 1px 0 1px black,
-    -1px 0 1px white;
-}
-
-.font-anaglyph {
-  text-shadow: -0.06em 0 red, 0.06em 0 cyan;
-}
-
-.font-emboss {
-  text-shadow: 0px 1px 1px white, 0 -1px 1px black;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap');
-
-.page-permalink.center-vert,
-.page-permalink.webkit-flex {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-audio,
-video {
-  display: inline-block;
-}
-
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
-iframe {
-  width: 100%;
-}
-
-img {
-  max-width: 100%;
-  margin: 0 auto;
-}
-
-/*tumblr system*/
-.has-google-fonts .head-title,
-.has-google-fonts .header-desc {
-  font-family: Cormorant Garamond, sans-serif;
-}
-
-img.avatar,
-ol.notes,
-svg.hidden {
-  display: none;
-}
-
-.post__footer li,
-.post__footer ul {
-  display: inline;
-}
-
-.metadata,
-.social {
-  margin: 0.278em 0;
-  line-height: 19px;
-  line-height: 1.056;
-}
-
-.like_button {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  z-index: 10;
-}
-
-div.custom-like-button {
-  position: relative;
-}
-
-li.custom-like-button {
-  display: inline-block;
-}
-
-ol.notes {
-  position: absolute;
-  padding: 0 0 50px;
-  max-width: 100%;
-}
-
-body.has-center-text ol.notes {
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-  width: 100%;
-}
-
-.icon-heart,
-.like_text {
-  opacity: 0.5;
-}
-
-.like_button:hover + .like_text {
-  opacity: 1;
-}
-
-.icon-heart,
-a:not(.nav-item) {
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-.post__footer .custom-like-button {
-  position: relative;
-}
-
-.post__footer .like_button:hover + .like_text {
-  opacity: 1;
-}
-
-.post__footer .like_button.liked + .like_text {
-  display: none;
-}
-
-.post__footer .like_text--liked {
-  display: none;
-}
-
-.post__footer .like_button + .like_text + .like_text--liked {
-  display: none;
-  opacity: 0;
-}
-
-.post__footer .like_button.liked + .like_text + .like_text--liked {
-  display: block;
-  opacity: 1;
-}
-
-.icon-heart:hover {
-  opacity: 1;
-}
-
-.tmblr-iframe.tmblr-iframe--sticky-ad {
-  opacity: 0;
-}
-
-/*infinityScroll system*/
-#infscr-loading {
-  margin: auto;
-  text-align: center;
-}
-
-/*1*/
-body {
-  height: 100%;
-}
-
-html {
-  height: 100%;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  /*scroll-behavior: smooth;*/
-  font-size: 1rem;
-}
-
-/*2*/
-h1,
-h2,
-h3 {
-  font-weight: 400;
-}
-
-svg:not(:root) {
-  overflow: hidden;
-}
-
-body.has-center-text {
-  text-align: center;
-}
-
-.head-title {
-  margin: 30px 0 0;
-}
-
-.user-avatar,
-.wrapper {
-  margin: 0 auto;
-}
-
-.head-title > a,
-a#tumblr_lightbox_center_link {
-  opacity: 1;
-}
-
-.SNS-link a {
-  margin: 0 0.5em;
-  letter-spacing: 0.1em;
-  display: block;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:hover {
-  opacity: 1;
-  color: #222;
-}
-
-.avatar-style-circle .user-avatar {
-  border-radius: 50%;
-}
-
-.container-l > a {
-  display: inline-block;
-  opacity: 1;
-}
-
-.wrapper {
-  opacity: 0;
-  padding: 25px 0;
-  transition: all 0.2s;
-}
-
-.wrapper.fade-in {
-  opacity: 1;
-}
-
-.container {
-  max-width: 560px;
-  margin: 0 auto;
-}
-
-.container-l {
-  max-width: 560px;
-  margin: 0 auto;
-}
-
-.container-l.feature-has-large-images {
-  max-width: 100%;
-  text-align: center;
-}
-
-#pagination a,
-.blog-title-wrapper,
-h1.title a {
-  font-size: 21px;
-}
-
-.head-title,
-.header-avatar,
-.header-desc {
-  width: 100%;
-  text-align: center;
-}
-
-.head-title,
-.header-avatar,
-.header-desc,
-.logo.svg {
-  position: relative;
-}
-
-.load-wrapper {
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: #fff;
-  z-index: 999;
-  position: fixed;
-  -webkit-transition: opacity 0.2s ease-in;
-  -ms-transition: opacity 0.2s ease-in;
-  transition: opacity 0.2s ease-in;
-}
-
-.load-wrapper.hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.header-overlay {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 65px;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  z-index: 9999;
-}
-
-.photoset_row {
-  margin: 0 auto !important;
-}
-
-li {
-  list-style: none;
-  margin: 0 0.556em 0 0;
-}
-
-.post__footer ul:first-child li:first-child,
-nav li:first-child {
-  margin-left: 0;
-}
-
-#pagination > ul {
-  text-align: center;
-  padding: 0 0 100px;
-}
-
-.page-permalink nav.header {
-  display: none;
-}
-
-.page-permalink.center-vert {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  display: -webkit-flex;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-justify-content: center;
-}
-
-.page-permalink.webkit-flex {
-  -ms-flex-direction: column;
-  flex-direction: column;
-}
-
-.blog-title-wrapper {
-  position: absolute;
-  top: 2em;
-  left: 0.618em;
-}
-
-#content {
-  margin: 3em 0 0;
-}
-
-span.label {
-  font-weight: 700;
-}
-
-span.label + p {
-  display: inline;
-}
-
-.page-permalink #content {
-  padding: 100px 1.618vh;
-  display: flex;
-  display: -webkit-flex;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-
-.page-permalink #content.block {
-  display: block;
-}
-
-.page-permalink .wrapper.margin {
-  margin: 0;
-}
-
-.page-permalink.page-photoset {
-  -webkit-flex-direction: initial;
-  flex-direction: initial;
-}
-
-.photoset {
-  margin: 0 auto;
-}
-
-.page-permalink {
-  display: flex;
-  display: -webkit-flex;
-}
-
-.page-index #content {
-  padding-bottom: 160px;
-}
-
-.page-index article:last-of-type {
-  margin-bottom: 0;
-}
-
-p > a {
-  word-break: break-all;
-}
-
-.container-l.feature-has-large-images img {
-  width: auto;
-  max-width: 100%;
-}
-
-.post__footer li,
-.post__footer ul {
-  line-height: 1.5;
-}
-
-.page-index .video-player {
-  position: relative;
-  height: 0;
-  padding-bottom: 56.2857%;
-}
-
-.page-index .video-player iframe {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-}
-
-iframe[id^='like_iframe'] {
-  position: absolute;
-  width: 100%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  top: 50%;
-  left: 0;
-}
-
-.photoset .container-l.feature-has-large-images {
-  max-width: 700px;
-}
-
-h1.title a {
-  line-height: 2em;
-}
-
-.page-permalink {
-  display: flex;
-  display: -webkit-flex;
-  font-size: small;
-  line-height: 1.8em;
-  letter-spacing: 0.6px;
-}
-
-.page-permalink .head-wrap {
-  display: none;
-}
-
-.grade1 {
-  /*https://www.cssmatic.com/gradient-generator#'\-moz\-linear\-gradient\%28top\%2C\%20rgba\%28245\%2C245\%2C245\%2C1\%29\%200\%25\%2C\%20rgba\%28237\%2C251\%2C255\%2C1\%29\%2016\%25\%2C\%20rgba\%28237\%2C245\%2C247\%2C1\%29\%2024\%25\%2C\%20rgba\%28255\%2C255\%2C255\%2C1\%29\%20100\%25\%29\%3B'*/
-  background: whitesmoke;
-  background: -moz-linear-gradient(
-    top,
-    whitesmoke 0%,
-    #edfbff 16%,
-    #edf5f7 24%,
-    white 100%
-  );
-  background: -webkit-gradient(
-    left top,
-    left bottom,
-    color-stop(0%, whitesmoke),
-    color-stop(16%, #edfbff),
-    color-stop(24%, #edf5f7),
-    color-stop(100%, white)
-  );
-  background: -webkit-linear-gradient(
-    top,
-    whitesmoke 0%,
-    #edfbff 16%,
-    #edf5f7 24%,
-    white 100%
-  );
-  background: -o-linear-gradient(
-    top,
-    whitesmoke 0%,
-    #edfbff 16%,
-    #edf5f7 24%,
-    white 100%
-  );
-  background: -ms-linear-gradient(
-    top,
-    whitesmoke 0%,
-    #edfbff 16%,
-    #edf5f7 24%,
-    white 100%
-  );
-  background: linear-gradient(
-    to bottom,
-    whitesmoke 0%,
-    #edfbff 16%,
-    #edf5f7 24%,
-    white 100%
-  );
-}
-
-.head-wrap {
-  top: 0;
-  width: 100%;
-}
-
-.container-l {
-  min-height: 20vh;
-  background: linear-gradient(to bottom, whitesmoke 0%, white 100%);
-  /* overflow-x: scroll;*/
-}
-
-.photoset .container-l {
-  display: inline-flex;
-  align-items: center;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  justify-content: space-around;
-}
-
-.photoset img {
-  flex-basis: 25%;
-  width: 25%;
-  flex-shrink: 2;
-  flex-grow: 2;
-  margin: 0 0 1em;
-}
-
-.photoset img:last-child {
-  display: block !important;
-}
-
-@keyframes wave {
-  0% {
-    transform: matrix(1, 0, 0, 0.7, 0, 10);
-  }
-
-  10% {
-    transform: matrix(1, 0, 0, 1, 0, 0);
-  }
-
-  30% {
-    transform: matrix(1, 0, 0, 0.8, 0, -10);
-  }
-
-  100% {
-    transform: matrix(1, 0, 0, 1, 0, -70);
-  }
-}
-
-@keyframes sunk {
-  0% {
-    transform: translate(0, -3em);
-    opacity: 0;
-  }
-
-  1% {
-    transform: translate(0, -1em);
-    opacity: 0.618;
-  }
-
-  100% {
-    transform: translate(0, 0em);
-    opacity: 1;
-  }
-}
-
-@keyframes sunk-short {
-  0% {
-    transform: translate(0, -1em);
-    opacity: 0;
-  }
-
-  10% {
-    opacity: 0;
-  }
-
-  100% {
-    transform: translate(0, 0);
-    opacity: 1;
-  }
-}
-
-/*index only*/
-.index-img {
-  height: 38vh;
-  width: 100%;
-  background-image: url(https://static.tumblr.com/y9oo5wl/ThPox0ei0/surface.gif);
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-size: 120% auto;
-  background-attachment: scroll;
-  z-index: 1;
-  transform: matrix(1, 0, 0, 0.9, 0, 20);
-  animation: wave 180s 0s linear forwards;
-}
-
-.sunk {
-  animation: sunk 30s 0.3s ease-out forwards;
-  transform: translate(0px, -3em);
-  opacity: 0;
-}
-
-.sunk-short {
-  animation: sunk-short 3s 0.3s ease-out forwards;
-  transform: translate(0px, -10em);
-  opacity: 0;
-}
-
-header {
-  font-size: 0.82rem;
-}
-
-header nav {
-  font-size: 1rem;
-}
-
-header a {
-  margin: 0 0.2em;
-  letter-spacing: 0.15em;
-  line-height: 2.92em;
-}
-
-body.page-index #content {
-  height: 100%;
-}
-
-body.page-index article {
-  min-height: 92vh;
-  vertical-align: middle;
-  padding: 0 2.618vw;
-  flex-flow: column wrap;
-  justify-content: center;
-  align-items: center;
-  align-content: space-between;
-  text-align: left;
-  margin-bottom: 1.618vh;
-}
-
-.post__footer {
-  margin-top: 0em;
-}
-
-.head-title {
-  margin: 0;
-  font-size: 1.618em;
-  margin-bottom: 0.1618em;
-  letter-spacing: 0.2em;
-  color: #555;
-}
-
-img,
-iframe {
-  max-width: 100%;
-}
-
-@media only screen and (max-width: 767px) {
-  body.page-index .container,
-  .post__footer,
-  ol.notes {
-    padding: 0 0.618vw;
-  }
-
-  img {
-    max-width: auto;
-  }
-}
-
-.page-index .container {
-  font-size: 14px;
-  line-height: 1.8em;
-}
-
-.post__footer {
-  font-size: 14px;
-  line-height: 1.8em;
-}
-
-.post__footer a {
-  font-size: 14px;
-  line-height: 1.8em;
-}
-
-.container-l,
-iframe {
-  margin-bottom: 0.618em;
-}
-
-.container,
-.container-l {
-  max-width: 1200px;
-}
-
-footer {
-  max-width: 1200px;
-  margin: auto;
-}
-
-section > footer {
-  margin-top: 30vh;
-}
-
-/*win*/
-.win {
-  font-size: 1em;
-}
-
-/* @group モバイル*/
-.mobile .wrapper {
-  padding: 50px 0;
-}
-
-.mobile img {
-  max-width: 100%;
-}
-
-.mobile body.page-index article {
-  width: 100%;
-  min-height: 61.8vh;
-  margin-bottom: 0vh;
-}
-
-.mobile article > div {
-  width: 100%;
-}
-
-/*.mobile .index-img {*/
-/*    background-size:auto 50%;*/
-/*    height: 28vh;*/
-/*}*/
-/*photoset 最後の画像だけ表示*/
-#bio p {
-  margin-bottom: 1em;
-}
-div,
-article {
-  @apply max-w-full;
 }
